GNOME Bugzilla – Bug 581389
Fix arg.c to use 'interface' instead of 'symbol'
Last modified: 2009-05-05 17:54:39 UTC
Code and messages in arg.c were written when G_TYPE_TAG_INTERFACE was temporarily G_TYPE_TAG_SYMBOL; while "symbol" is as good or better a name than "symbol", it's quite confusing to have the code not match the girepository name.
Created attachment 133982 [details] [review] Fix arg.c to use 'interface' instead of 'symbol'
Yes
Pushed