Fix arg.c to use 'interface' instead of 'symbol'

Code and messages in arg.c were written when G_TYPE_TAG_INTERFACE
was temporarily G_TYPE_TAG_SYMBOL; while "symbol" is as good or
better a name than "symbol", it's quite confusing to have the
code not match the girepository name.

http://bugzilla.gnome.org/show_bug.cgi?id=581389